# meme-emotion

./: README.md  pyproject.toml
scripts/: predict_sentiment.py  predict_text_sentiment.py  train_multi_outputs.py  train_resnet.py  train_svm.py  train_text_classifier.py  train_text_multi_output.py
src/meme_emotion/: data.py  utils.py
src/meme_emotion/models/: image_classifier.py  multimodal.py  text_classifier.py
